@@ -11,3 +11,4 @@ Changes in current version:
  o Fix buffer size and string generation in evdns_resolve_reverse_ipv6().
  o Respond to nonstandard DNS queries with "NOTIMPL" rather than by ignoring them.
  o In DNS responses, the CD flag should be preserved, not the TC flag.
+ o Fix http.c to compile properly with USE_DEBUG; from Christopher Layne
